--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script type="text/javascript" src="./web3.min.js"></script>
+    <script type="text/javascript" src="node_modules/web3/dist/web3.js"></script>
     <script type="text/javascript" src="./main.js"></script>
     <script type="text/javascript" src="./abi.js"></script>
     <title>CoinFlip Dapp</title>
