added web3 tx listener

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <button type="button" id="betButton">Bet!</button>     
      </form>
      <br>      
-Result: <span id="name_output"></span>
+Result: <span id="bet_output"></span>
 
 </body>
 </html>
