added Provable Oracle API for RNG

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
     <br>
     Contract Balance: <span id="contract_balance"></span><br>
     <button type="button" id="getContractBalance">Contract Balance</button><br>
-    <button type="button" id="withdrawContractBalance">Withdraw Contract Balance (owner only)</button><br>
+    <button type="button" id="withdrawContractBalance">Withdraw Contract Balance (contract owner)</button><br>
+    Random Number: <span id="random_number"></span><br>
 
     </div>
     <style>
